# notifications-keeper

./: .gitignore  MANIFEST.in  README.md  setup.cfg
conf/: keeper.conf  keeper.conf.example
keeper/: __init__.py
keeper/service/: app.py  enums.py  lib.py  views.py  writer.py
keeper/service/notification/: schema.json  validator.py  writer.py
tests/: conftest.py  test_factory.py  test_hook.py  test_storage.py  test_validation.py
