[metadata]
name = keeper-ivnglkv
version = 0.1

[options]
packages = find:
install_requires =
    flask~=2.0.1
    jsonschema~=3.2.0
    rfc3339-validator~=0.1.4
include_package_data = True

[options.extras_require]
test =
    pytest~=6.2.4
    coverage~=5.5

[coverage:run]
branch = True
source = keeper
